fix button width in compactMenuBtn on small screens

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -203,6 +203,7 @@ input:checked ~ .openMenu{
 }
 .compactMenuBtn{
   position: relative;
+  width: 7rem;
   border: 2px solid $green-bright;
   border-radius: 20px;
   margin: 0.5rem 1rem;
